--- a/src/styles/components/navbar.css
+++ b/src/styles/components/navbar.css
@@ -1,11 +1,18 @@
 /* General navbar styling */
 .navbarContainer {
-  background-color: aqua;
+  background-color: none;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  z-index: 3; /* Ensure navbar is above other content */
+  color: #242323;
+  padding-top: 3rem;
 }
 
 /* Smooth transition for showing/hiding navbar */
 .transition-navbar {
-  transition: transform 0.3s ease-in-out;
+  transition: transform 0.5s ease-in-out;
   z-index: 1030;
 }
 
@@ -14,12 +21,64 @@
   transform: translateY(-100%);
 }
 
-
-.logo-container {
-  background-color: pink;
+.nav-links-container{
+  padding: 0 5rem 0 0;
+}
+.nav-link {
+  color: currentColor;
+  font-family: inherit;
+  text-decoration: none;
+  display: inline-block;
+  vertical-align: top;
+  position: relative;
+  background: none;
+  border: none;
+  cursor: pointer;
+  text-transform: uppercase;
+  font-weight: 600;
+  transition: 0.3s ease;
 }
 
-.nav-links-container {
-  background-color: blue;
-  align-items: flex-start;
+.navbar-brand {
+  font-family: "Teko", Helvetica, sans-serif;
+  font-size: 36px;
+  line-height: 0.555555555555556;
+  margin-top: 0.1em;
+  text-transform: uppercase;
+  color: currentColor;
+  text-decoration: none;
+  letter-spacing: 0.2em;
+  transition: all 0.3s;
+}
+
+
+.navbar-nav {
+  gap: 2.5rem;
+}
+
+@media (max-width: 2560px) and (min-width: 1440px) {
+  .custom-align {
+    justify-content: flex-start !important;
+  }
+  .nav-links-container {
+    padding-left: 60px;
+  }
+}
+
+@media (max-width:1440px){
+    .custom-align {
+    justify-content: center !important;
+  }
+}
+
+@media (max-width: 768px){
+  .nav-links-container {
+    padding: 0 0 0 0;
+    padding-top: 20px;
+  }
+  .custom-align {
+    padding: 0 0 0 0;
+    align-items: flex-end;
+  }
+
 }
