--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,8 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 * {
   margin: 0;
   padding: 0;
@@ -9,59 +14,13 @@ body {
   height: 100%;
   width: 100%;
   font-family: "Poppins", sans-serif;
-  background: #000;
+  background: #ffffff;
   color: #fff;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
-.section {
-  height: 100vh;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  overflow: hidden;
-  transform-origin: center center;
-  will-change: transform, opacity;
-}
 
-.section-1 {
-  background: url("/mountain.jpeg") no-repeat center center / cover;
+.section_padding {
+  padding-top: 90px;
+  padding-bottom: 90px !important;
 }
-.section-2 {
-  background: url("/zoom.jpg") no-repeat center center / cover;
-}
-.section-3 {
-  background: url("/zoom2.png") no-repeat center center / cover;
-}
-
-.section::after {
-  content: "";
-  position: absolute;
-  inset: 0;
-  background: rgba(0, 0, 0, 0.4);
-  z-index: 1;
-}
-
-.content {
-  position: relative;
-  z-index: 2;
-  text-align: center;
-  max-width: 800px;
-  padding: 2rem;
-}
-
-.content h1 {
-  font-size: clamp(2rem, 5vw, 4rem);
-  font-weight: 700;
-  margin-bottom: 1rem;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-}
-
-.content p {
-  font-size: clamp(1rem, 2vw, 1.25rem);
-  color: #ddd;
-} 
-
