--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,22 +1,20 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 
-* {
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
+} */
 
 html,
 body {
   height: 100%;
   width: 100%;
-  font-family: "Poppins", sans-serif;
-  background: #ffffff;
-  color: #fff;
-  /* overflow-x: hidden; */
+  font-family: var(--font-roboto), sans-serif;
+  background-color: #ffffff;
+  color: #000000;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 
@@ -24,3 +22,5 @@ body {
   padding-top: 90px;
   padding-bottom: 90px !important;
 }
+
+
