--- a/src/styles/components/aboutus.module.css
+++ b/src/styles/components/aboutus.module.css
@@ -1,19 +1,32 @@
 .banner {
   position: relative;
   height: 100vh;
-  background-image: url('/zoom2.png'); /* <-- Replace with your filename */
+  background-image: url("/service.jpg"); /* your image */
   background-size: cover;
   background-position: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  transition: opacity 0.5s ease;
 }
 
+/* Dark overlay layer */
 .overlay {
-  color: white;
-  max-width: 800px;
-  padding: 20px;
-  text-align: left;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;           
+  justify-content: center;    
+  align-items: center;          
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 2;
+}
+/* Content wrapper */
+.content {
+  position: relative;
+  z-index: 3;
+  text-align: left; /* ✅ center text */
+  color: #fff;
+  padding: 180px 290px 120px; /* optional: spacing for small screens */
 }
 
 .hello {
@@ -28,7 +41,7 @@
   font-size: 160px;
   font-weight: normal;
   margin-bottom: 1rem;
-  font-family: 'Teko';
+  font-family: "Teko";
 }
 
 .description {
