--- a/src/styles/components/Contact.module.css
+++ b/src/styles/components/Contact.module.css
@@ -10,6 +10,7 @@
   margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
+  padding: 40px;
   /* gap:20px; */
   align-items: flex-start;
 }
