--- a/src/styles/components/Footer.module.css
+++ b/src/styles/components/Footer.module.css
@@ -106,6 +106,13 @@
   color: #fff;
 }
 
+.logo {
+  display: flex;
+  justify-content: center;
+  background-color: #fff;
+  align-items: center;
+}
+
 /* Responsive */
 @media (max-width: 900px) {
   .container {
