feat: Project banner responsive solved

--- a/src/styles/components/Navbar.module.css
+++ b/src/styles/components/Navbar.module.css
@@ -292,6 +292,13 @@
   .burger {
     display: flex;
     z-index: 3000 !important;
+    top: 2.1rem
+        /* top: 0px !important; */
+
+  }
+
+  .navbarContainer {
+    padding-left:20px !important;
   }
 
   .desktopNavLinks {
