--- a/src/styles/components/Aboutus.module.css
+++ b/src/styles/components/Aboutus.module.css
@@ -4,7 +4,7 @@
 .banner {
   position: relative;
   height: 100vh;
-  background-image: url("/service.jpg");
+  background-image: url("/Bedroom.jpg");
   background-size: cover;
   background-position: center;
 }
